--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,12 @@ add_executable(Fast-ALPR main.cpp
     yolov8/yolovpose.h yolov8/yolovpose.cpp
     yolov8/keypoints.h yolov8/keypoints.cpp
     yolov8/boundboxe.h yolov8/boundboxe.cpp
-    tools/imgutils.h tools/imgutils.cpp)
+    tools/imgutils.h tools/imgutils.cpp
+    ocr/clipper.h ocr/clipper.cpp
+    ocr/cls_procces.h ocr/cls_procces.cpp
+    ocr/crnn_process.h ocr/crnn_process.cpp
+    ocr/db_post_procces.h ocr/db_post_procces.cpp
+)
 
 # OpenCV
 find_package(OpenCV REQUIRED)
@@ -19,8 +24,8 @@ target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
 find_package(fmt REQUIRED)
 target_link_libraries(${PROJECT_NAME} PUBLIC fmt::fmt)
 
-file (GLOB_RECURSE headers "yolov8/*.h*" "tools/*.h*")
-file (GLOB_RECURSE sources "yolov8/*.c*" "tools/*.c*")
+file (GLOB_RECURSE headers "yolov8/*.h*" "tools/*.h*" "ocr/*.h*")
+file (GLOB_RECURSE sources "yolov8/*.c*" "tools/*.c*" "ocr/*.c*")
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/models ${PROJECT_BINARY_DIR})
 target_sources(${PROJECT_NAME} PRIVATE ${sources} ${headers})
